--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
     "gsap": "^3.12.5",
     "nodemon": "^3.1.0",
     "split-type": "^0.3.4"
