--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -4,7 +4,7 @@
         "name": "Mokum Corners",
         "description": "Project ISGA - International shop and recipe mobile site",
         "lang": "EN",
-        "img": "./images/mokum-corners.png",
+        "img": "../images/mokum-corners.png",
         "pageUrl": "mokum-corners",
         "url": "https://github.com/username/project1"
       },
@@ -12,7 +12,7 @@
         "name": "Salut",
         "description": "A mobile app project where you easily send in your package returns",
         "lang": "EN",
-        "img": "./images/salut.png",
+        "img": "../images/salut.png",
         "pageUrl": "salut-app",
         "url": ""
       },
@@ -20,7 +20,7 @@
         "name": "ADE",
         "description": "Redesigning the ADE website with accesibility in mind",
         "lang": ["NL", "EN"],
-        "img": "./images/ade.png",
+        "img": "../images/ade.png",
         "pageUrl": "salut-app",
         "url": "https://github.com/username/project2"
       },
@@ -28,7 +28,7 @@
         "name": "Creative Captioning, Bitch!",
         "description": "Turning closed captions into a creative viewing experience for the deaf and hard of hearing",
         "lang": "NL",
-        "img": "./images/creative-captioning.png",
+        "img": "../images/creative-captioning.png",
         "pageUrl": "creative-captioning",
         "url": "https://github.com/username/project2"
       },
@@ -36,7 +36,7 @@
         "name": "Music Gallery",
         "description": "A Spotify API based app where you can make recommended playlists based on your top 10 tracks",
         "lang": "EN",
-        "img": "./images/music-gallery.png",
+        "img": "../images/music-gallery.png",
         "pageUrl": "music-gallery",
         "url": "https://github.com/username/project2"
       }
