please fix this weird img issue..

--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -4,7 +4,7 @@
         "name": "Mokum Corners",
         "description": "Project ISGA - International shop and recipe mobile site",
         "lang": "EN",
-        "img": "../images/mokum-corners.png",
+        "img": "../images/mokumcorners.png",
         "pageUrl": "mokum-corners",
         "url": "https://github.com/username/project1"
       },
